Sat Jan  9 15:08:44 1999  Jeff Garzik  <jgarzik@pobox.com>

	* testglib.c:
	Make all aux functions static.

	* tests/Makefile.am, tests/dirname-test.c, tests/type-test.c:
	New tests dirname-test and type-test, from testglib.

Sat Jan  9 13:53:00 1999  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in:
	Add checks for vasprintf, localtime_r.

	* gdate.c (g_date_set_time):
	Use localtime if localtime_r is not available.

	* gstrfuncs.c (g_strdup_vprintf):
	Use glibc vasprintf if possible; it's a bit faster than using
	GLib routines, and makes output code a bit smaller.

	* acconfig.h:
	Remove HAVE_VSNPRINTF and HAVE_VPRINTF.  autoheader picks these
	up automatically and puts them in config.h.in.

Thu Jan  7 15:14:08 1999  Owen Taylor  <otaylor@redhat.com>

	* gmain.c (g_source_free_func): Call the source-specific
	free function when the hook is freed not when it
	is destroyed; this fixes a bug where a timeout destroyed
	from itself would access already freed data.

1999-01-07  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gutils.c (g_get_any_init): Here we must replace getpwuid by
	getpwuid_r, but as I do not know how for now, I just made a FIXME
	note ;-)

	* gdate.c (g_date_set_time): localtime --> localtime_r to make it
	thread safe.

	* configure.in: We do not need to check for broken solaris mutex
	intitializer any longer. Provide a macro to show the used thread
	implementation. Not nice, but this is needed until thread support
	is completed here inside glib.

Tue Jan  5 12:23:52 PST 1999 Manish Singh <yosh@gimp.org>

	* configure.in: ditch whitespace before GLIB_SYSDEFS #includes,
	the # needs to be in column 1

	* gthread/testgthread.c: cleanups

	* tests/node-test.c: #include unistd.h for exit()

1999-01-04  Andrew T. Veliath  <andrewtv@usa.net>

	* glib.h (g_array_insert_val): fix macro to be shorthand of
	g_array_insert_vals.

Mon Jan  4 15:35:29 PST 1999 Manish Singh <yosh@gimp.org>

	* acglib.m4: some echos interpret \n's and some don't. Deal with